<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    app:showAsAction="withText|always"
    android:id="@+id/lenta"
    android:icon="@drawable/lenta"
    android:title="@string/lenta"/>
    <item
        app:showAsAction="withText|always"
        android:id="@+id/tests"
        android:icon="@drawable/tests"
        android:title="@string/tests"/>
    <item
        app:showAsAction="withText|always"
        android:id="@+id/camera"
        android:icon="@drawable/record"
        android:title="@string/camera"/>
    <item
        app:showAsAction="withText|always"
        android:id="@+id/history"
        android:icon="@drawable/history"
        android:title="@string/history"/>
    <item
        app:showAsAction="withText|always"
        android:id="@+id/profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>
</menu>