<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:background="@color/black"
        android:layout_alignParentTop="true"
        android:layout_above="@id/sub_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">
            <VideoView
                android:layout_centerHorizontal="true"
                android:id="@+id/video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/diss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/diss"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:layout_alignBottom="@id/video"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:id="@+id/disstext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_alignLeft="@id/diss"
                android:text="1К"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="5dp"
                android:layout_alignBottom="@id/diss"
                android:textColor="@android:color/darker_gray"
                android:textSize="25sp"/>
            <ImageView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/like"
                android:layout_alignParentEnd="true"
                android:rotation="180"
                android:layout_marginBottom="20dp"
                android:layout_alignBottom="@id/video"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/like_text"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toStartOf="@id/like"
                android:layout_alignRight="@id/like"
                android:layout_marginBottom="20dp"
                android:layout_alignBottom="@id/like"
                android:text="1К"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"/>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="200dp"/>
<!--            <ImageButton-->
<!--                android:clickable="false"-->
<!--                android:id="@+id/start_stop"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:layout_marginTop="200dp"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:scaleType="fitXY"-->
<!--                android:src="@drawable/play"-->
<!--                android:background="@android:color/transparent"/>-->
            <ImageView
                android:id="@+id/avatar_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile"
                android:background="@color/black"
                android:layout_margin="10dp"
                android:layout_below="@id/video"/>
<!--            <TextView-->
<!--                android:id="@+id/date"-->
<!--                android:textColor="@android:color/background_light"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignParentRight="true"-->
<!--                android:layout_below="@id/video"-->
<!--                android:text="1.10.2019"-->
<!--                android:layout_margin="10dp"/>-->
            <TextView
                android:textColor="@android:color/background_light"
                android:id="@+id/name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Иван Иванов"
                android:textSize="20sp"
                android:layout_below="@id/video"
                android:layout_toRightOf="@id/avatar_img"/>
            <TextView
                android:id="@+id/post_user"
                android:textColor="@android:color/background_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:text="Программист"
                android:layout_toRightOf="@id/avatar_img"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/info_work"
                android:textColor="@android:color/background_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ну очень хорошая работа, график удобный 24/7. платят бананами раз в 2 месяца"
                android:layout_below="@id/avatar_img"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
        </RelativeLayout>
    </ScrollView>

        <LinearLayout
            android:id="@+id/sub_menu"
            android:layout_above="@id/bottom_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/finder"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/finder"
                android:textSize="12sp"
                android:background="@color/black"
                android:textColor="@android:color/background_light"/>
            <Button
                android:id="@+id/bloger"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/bloger"
                android:background="@color/black"
                android:textColor="@android:color/background_light"/>
            <Button
                android:id="@+id/work"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/work"
                android:background="@color/black"
                android:textColor="@android:color/background_light"/>
        </LinearLayout>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_menu"
            app:itemIconSize="30dp"
            app:itemTextColor="@android:color/background_light"
            app:itemBackground="@color/black"
            app:itemIconTint="@android:color/background_light"
            app:itemHorizontalTranslationEnabled="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</layout>